--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style type="text/css">
+    footer {
+  background-color: #101010;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+  </style>
 </head>
 <body>
 
@@ -84,6 +92,8 @@
   <li>Tableau Data Source (.tds)</li><li>Tableau Packaged Data Source (.tdsx)</li>
   
 </div>
-
+<footer>
+  <p>&#9400; Kamlesh Karki :: 2021 - 2022</p>
+</footer>
 </body>
 </html>
