--- a/Session1.html
+++ b/Session1.html
@@ -94,10 +94,8 @@ div.desc {
 </div>
 <div class="container">
   <h3>Assignment : 1</h3>
-  <li>Analyze titanic data set</li>
-  <li>Replace blank value to null</li>
+  <a href="html_images.asp" target="_blank"><li>Analyze titanic data set</li></a> 
+   <li>Replace blank value to null</li>
 </div>
-
-
 </body>
 </html>
