--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style type="text/css">
     footer {
-  background-color: #101010;
-  padding: 10px;
-  text-align: center;
-  color: white;
+          background-color: #101010;
+          padding: 10px;
+          text-align: center;
+          color: white;
+          position: fixed;
+          width: 100%;
+          bottom: 0;
 }
   </style>
 </head>
