--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
   <li>Tableau Server</li>
   <li>Tableau Reader</li>
 </div>
+   <div class="container">
+  <h3>Tableau File Types</h3>
+  <p>Only when the button is clicked, the navigation bar will be displayed.</p> -->
+  <li>Tableau Workbook (.twb)</li><li>Tableau Data Extract (.tde)</li>
+  <li>Tableau Bookmark (.tbm)</li><li>Tableau Map Source (.tms)</li>
+  <li>Tableau Preference (.tps))</li><li>Tableau Packaged Workbook (.twbx)</li>
+  <li>Tableau Data Source (.tds)</li><li>Tableau Packaged Data Source (.tdsx)</li>
+</div>
  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 <footer>
   <p>&#9400; Kamlesh Karki :: 2021 - 2022</p>
