--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <li>Tableau Preference (.tps))</li><li>Tableau Packaged Workbook (.twbx)</li>
   <li>Tableau Data Source (.tds)</li><li>Tableau Packaged Data Source (.tdsx)</li>
 </div>
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+ &emsp;
 <footer>
   <p>&#9400; Kamlesh Karki :: 2021 - 2022</p>
 </footer>
