--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <li>Tableau Workbook (.twb)</li><li>Tableau Data Extract (.tde)</li>
   <li>Tableau Bookmark (.tbm)</li><li>Tableau Map Source (.tms)</li>
   <li>Tableau Preference (.tps))</li><li>Tableau Packaged Workbook (.twbx)</li>
-  <li>Tableau Data Source (.tds)</li><li>Tableau Packaged Data Source (.tdsx)</li>
+  <!--<li>Tableau Data Source (.tds)</li><li>Tableau Packaged Data Source (.tdsx)</li>-->
 </div>
  &emsp;
 <footer>
