--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Session <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="Session1.html">Session 1</a></li>
-            <li><a href="#">Session 2</a></li>
+            <li><a href="Session2.html">Session 2</a></li>
             <li><a href="#">Session 3</a></li>
             <li><a href="#">Session 4</a></li>
             <li><a href="#">Session 5</a></li>
