--- a/Session1.html
+++ b/Session1.html
@@ -50,8 +50,8 @@ div.desc {
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Session <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="Session1.html">Session 1</a></li>
-            <li><a href="#">Session 2</a></li>
-            <li><a href="#">Session 3</a></li>
+            <li><a href="Session2.htlm">Session 2</a></li>
+            <li><a href="Session3.html">Session 3</a></li>
             <li><a href="#">Session 4</a></li>
             <li><a href="#">Session 5</a></li>
             <li><a href="#">Session 6</a></li>
