--- a/Session2.html
+++ b/Session2.html
@@ -51,7 +51,7 @@ div.desc {
           <ul class="dropdown-menu">
             <li><a href="Session1.html">Session 1</a></li>
             <li><a href="Session2.html">Session 2</a></li>
-            <li><a href="#">Session 3</a></li>
+            <li><a href="Session3.html">Session 3</a></li>
             <li><a href="#">Session 4</a></li>
             <li><a href="#">Session 5</a></li>
             <li><a href="#">Session 6</a></li>
