--- a/Session3.html
+++ b/Session3.html
@@ -80,7 +80,7 @@ div.desc {
 
 <div class="container">
   <h3>Assignment : 3</h3>
-  <a href="#"><li>Create different Worksheets with same data set to analysis Tatinic Dataset </li></a> 
+  <a href="#"><li>Create different Worksheets with the same data to analyze Titanic dataset</li></a> 
 </div>
 </body>
 </html>
