--- a/Session3.html
+++ b/Session3.html
@@ -77,7 +77,13 @@ div.desc {
   <li>Tableau - Reorder Worksheet</li>
   <li>Tableau - Paged Workbook</li>   
 </div>
-
+   <div class="container">
+  <h3>Tableau File Types</h3>
+  <li>Tableau Workbook (.twb)</li><li>Tableau Data Extract (.tde)</li>
+  <li>Tableau Bookmark (.tbm)</li><li>Tableau Map Source (.tms)</li>
+  <li>Tableau Preference (.tps))</li><li>Tableau Packaged Workbook (.twbx)</li>
+  <!--<li>Tableau Data Source (.tds)</li><li>Tableau Packaged Data Source (.tdsx)</li>-->
+</div>
 <div class="container">
   <h3>Assignment : 3</h3>
   <a href="#"><li>Create different Worksheets with the same data to analyze Titanic dataset</li></a> 
