--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li><a href="Session1.html">Session 1</a></li>
             <li><a href="Session2.html">Session 2</a></li>
             <li><a href="Session3.html">Session 3</a></li>
+            <li><a href="Session4.html">Session 4-5</a></li>
             <li><a href="#">Session 4</a></li>
             <li><a href="#">Session 5</a></li>
             <li><a href="#">Session 6</a></li>
