--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <li><a href="Session2.html">Session 2</a></li>
             <li><a href="Session3.html">Session 3</a></li>
             <li><a href="Session4.html">Session 4-5</a></li>
-            <li><a href="#">Session 4</a></li>
-            <li><a href="#">Session 5</a></li>
+            <li><a href="Session6.html">Session 6</a></li>
             <li><a href="#">Session 6</a></li>
             <li><a href="#">Session 7</a></li>
             <li><a href="#">Session 8</a></li>
@@ -77,6 +76,7 @@
  
  <div class="container">
   <h3>Tableau Product</h3>
+  <!-- <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try to re-size this window).-->
   <p>The Tableau Product Suite consists of</p>
   <li>Tableau Desktop</li>
   <li>Tableau Public</li>
@@ -84,7 +84,7 @@
   <li>Tableau Server</li>
   <li>Tableau Reader</li>
 </div>
- &emsp;
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 <footer>
   <p>&#9400; Kamlesh Karki :: 2021 - 2022</p>
 </footer>
