--- a/Session1.html
+++ b/Session1.html
@@ -50,13 +50,8 @@ div.desc {
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Session <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="Session1.html">Session 1</a></li>
-<<<<<<< HEAD
             <li><a href="Session2.html">Session 2</a></li>
             <li><a href="#">Session 3</a></li>
-=======
-            <li><a href="Session2.htlm">Session 2</a></li>
-            <li><a href="Session3.html">Session 3</a></li>
->>>>>>> b134631a61db946a3976f81051e790a1a9ad6343
             <li><a href="#">Session 4</a></li>
             <li><a href="#">Session 5</a></li>
             <li><a href="#">Session 6</a></li>
@@ -106,10 +101,10 @@ div.desc {
   <li>Tableau Preference (.tps))</li><li>Tableau Packaged Workbook (.twbx)</li>
   <li>Tableau Data Source (.tds)</li><li>Tableau Packaged Data Source (.tdsx)</li>
 </div>
-<!--<div class="container">
+<div class="container">
   <h3>Assignment : 1</h3>
   <a href="html_images.asp" target="_blank"><li>Analyze titanic data set</li></a> 
    <li>Replace blank value to null</li>
-</div>-->
+</div>
 </body>
 </html>
