--- a/Session1.html
+++ b/Session1.html
@@ -51,9 +51,9 @@ div.desc {
           <ul class="dropdown-menu">
             <li><a href="Session1.html">Session 1</a></li>
             <li><a href="Session2.html">Session 2</a></li>
-            <li><a href="#">Session 3</a></li>
-            <li><a href="#">Session 4</a></li>
-            <li><a href="#">Session 5</a></li>
+            <li><a href="Session3.html">Session 3</a></li>
+            <li><a href="Session4.html">Session 4-5</a></li>
+            <li><a href="Session6.html">Session 6</a></li>
             <li><a href="#">Session 6</a></li>
             <li><a href="#">Session 7</a></li>
             <li><a href="#">Session 8</a></li>
