--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="Session2.html">Session 2</a></li>
             <li><a href="Session3.html">Session 3</a></li>
             <li><a href="Session4.html">Session 4-5</a></li>
-            <li><a href="Session6.html">Session 6</a></li>
+            <li><a href="Session6.html">Session 6-8</a></li>
             <li><a href="#">Session 6</a></li>
             <li><a href="#">Session 7</a></li>
             <li><a href="#">Session 8</a></li>
