--- a/Session6.html
+++ b/Session6.html
@@ -85,7 +85,7 @@ div.desc {
 <li>Tableau - Motion Charts</li>
 <li>Tableau - Waterfall Charts</li>
 
-<h3>Tableau Charts</h3>
+<h3>Tableau Advanced</h3>
 
 <li>Tableau Advanced</li>
 <li>Tableau - Dashboard</li>
